fixed the signup required field, made sessionStorage save user_id, now i need to use the user id saved to show either the calendar tab or availability tab on the trainerprofile page

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"react-bootstrap": "^2.5.0",
 		"react-calendar": "^3.8.0",
 		"react-dom": "^16.8.4",
+		"react-hook-form": "^7.36.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
